# telegram-notes-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  justfile
.github/workflows/: main.yml
crates/bot/: Cargo.toml
crates/bot/src/: args.rs  lib.rs  main.rs
crates/bot/src/handlers/: help.rs  mod.rs  note.rs
crates/bot/src/llm_clients/: help_generator.rs  mod.rs  tags_generator.rs  task_selector.rs
crates/bot/src/utils/: markdown.rs  mod.rs  parse_template.rs  send_helpers.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: lib.rs  llm_client.rs  mistral.rs
prompts-tmp/: request.md
