[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "Apache-2.0-or-MIT"
edition = "2021"
repository = "https://github.com/defernus/llm-big-project"
keywords = ["boilerplate", "workspace", "example", "preset"]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4.5.1", features = ["env", "derive"] }
thiserror = "1.0.57"
reqwest = { version = "0.11.24", features = ["json"] }
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.77"
dotenvy = "0.15.7"
rand = "0.8.5"
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
regex = "1.10.3"
enum-iterator = "1.5.0"
chrono = "0.4.34"

# project packages
bot = { version = "0.1.0", path = "./crates/bot" }
llm-client = { version = "0.1.0", path = "./crates/llm-client" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
